01-Getting_Started/03-hello_world_1_service_2_deployments_managed_version/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
    service: helloworld
  namespace: default
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: helloworld
