01-Getting_Started/03-hello_world_1_service_2_deployments_managed_version/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  # name: helloworld (OLD)
  name: helloworld.default.svc.cluster.local # Destination that will "interject"
  namespace: default
spec:
  #  host: helloworld # destination service (OLD)
  host: helloworld.default.svc.cluster.local # Full destination service, lil better for consistency
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
